# qqg

./: .gitignore  Cargo.toml  README.md
.github/scripts/: check_version.ps1  create_artifacts.ps1  rename_artifacts.ps1
.github/workflows/: ci_cd.yml
samples/: indian_history.qq  many_options.qq  rust_basics.qq
src/: args.rs  ast.rs  info.rs  main.rs  out.rs  parser.rs  run.rs  styles.rs  test.rs  token.rs  utils.rs
