[package]
name = "quick-quiz-generator"
edition = "2024"
version = "0.0.1"
authors = ["sarkar-segfault"]
description = "generate web and console-based quizzes blazingly fast"
license = "GPL-3.0-or-later"
repository = "https://github.com/sarkar-segfault/qqg"
homepage = "https://github.com/sarkar-segfault/qqg"
documentation = "https://docs.rs/quick-quiz-generator"
readme = "README.md"
keywords = ["cli", "parser", "web", "text", "fun"]
categories = ["command-line-utilities", "parser-implementations", "text-processing", "web-programming", "games"]
default-run = "qqg"

[[bin]]
name = "qqg"
path = "src/main.rs"
