[package]
name = "quick-quiz-generator"
edition = "2024"
version = "0.1.0"
authors = ["sarkar-segfault"]
description = "generate interactive, console-based quizzes blazingly fast"
license = "GPL-3.0-or-later"
repository = "https://github.com/sarkar-segfault/qqg"
homepage = "https://crates.io/crates/quick-quiz-generator"
documentation = "https://docs.rs/quick-quiz-generator"
readme = "README.md"
keywords = ["cli", "parser", "interactive", "text", "fun"]
categories = ["command-line-utilities", "parser-implementations", "text-processing", "command-line-interface", "parsing"]
default-run = "qqg"

[[bin]]
name = "qqg"
path = "src/main.rs"
