[package]
name = "quick-quiz-generator"
edition = "2024"
version = "2.0.1"
authors = ["sarkar-segfault"]
description = "generate interactive quizzes blazingly fast, right in your terminal"
license = "GPL-3.0-or-later"
repository = "https://github.com/sarkar-segfault/qqg"
homepage = "https://crates.io/crates/quick-quiz-generator"
documentation = "https://docs.rs/quick-quiz-generator"
readme = "README.md"
keywords = ["cli", "parser", "interactive", "text", "fun"]
categories = ["command-line-utilities", "parser-implementations", "text-processing", "command-line-interface", "parsing"]
default-run = "qqg"

[[bin]]
name = "qqg"
path = "src/main.rs"
